# embedded-game-controller

./: .clang-format-ignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
embedded-game-controller/: CMakeLists.txt  bluetooth.c  bt_backend.h  driver_api.h  egc.c  egc.h  egc_types.h  internals.h  platform.h  utils.h
embedded-game-controller/backends/: gamecube.c  libusb.c  ogc.c  ogc_arm.c  wii.c
embedded-game-controller/backends/ogc/: lwbt
embedded-game-controller/backends/ogc/libogc_arm/: README.md  processor.h
embedded-game-controller/hid_drivers/: gamecube.c  gamecube.h  generic.c  sony_ds3.c  wiimote.c  wiimote.h
embedded-game-controller/usb_drivers/: dragonrise.c  generic.c  generic_mappings.c  generic_mappings.h  iine_pro_max.c  nintendo_switch.c  sony_ds3.c  sony_ds4.c  wiimote.c  wiimote.h
example/: CMakeLists.txt  main.c  terminal.c  terminal.h
tests/: test_invariant_bluetooth.py
